[gd_scene load_steps=7 format=2]

[ext_resource path="res://Blood.gd" type="Script" id=1]
[ext_resource path="res://img/gunsmoke.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.42803, 0.241379 ), 0.0, 1.98737, 0, 0, Vector2( 1, 1 ), 1.17717, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=2]
radius = 13.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.00002
height = 16.0

[node name="Blood" type="CPUParticles2D"]
material = SubResource( 1 )
amount = 35
lifetime = 0.25
explosiveness = 1.0
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 2.3
direction = Vector2( 1, -0.015 )
spread = 31.68
gravity = Vector2( 50, 0 )
initial_velocity = 126.24
initial_velocity_random = 0.83
angular_velocity = 140.0
angular_velocity_random = 0.61
scale_amount = 1.25
scale_amount_random = 0.61
scale_amount_curve = SubResource( 4 )
color = Color( 0.788235, 0.0980392, 0.0980392, 1 )
anim_speed_random = 1.0
anim_offset = 1.0
anim_offset_random = 1.0
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 2 )
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 19, -2 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 12, -2 )
rotation = 1.57079
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
